.provarCaches/00D5f000005vwGkEAI/objects/rstk__usrmobiprofile__c.object
<CustomObject>
    <description>usrmobiprofile__c</description>
    <fields>
        <fullName>rstk__icinvreconworkbench__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icreqadd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Requisition Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icreqworkbench__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Requisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ictransreqworkbench__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Location Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invdivtodivtransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Division to Division Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invlocadd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Location Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invlocadjust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Location Adjust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invloclabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Location Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invloctoloctransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location to Location Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invprojtoprojtransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project to Project Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invsitetositetransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site to Site Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__invstockoverview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poentry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poreceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soconsolidatedfulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidated Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soentry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soinvcreation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order Invoice (Creation)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sopack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order (Pack)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sopick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order (Pick)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order (Ship)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__usrlicense__c</fullName>
        <label>User License</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard User</fullName>
                </value>
                <value>
                    <fullName>Shop Floor User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__woclockonoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock On/Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woclose__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order (Close)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woissue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order (Issue)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__woreceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order (Receipt)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wotimeqtybooking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time &amp; Quantity Booking</label>
        <type>Checkbox</type>
    </fields>
    <label>User Mobile Profile</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__usrlicense__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Mobile Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>